Prepared interviews for evaluation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -180,3 +180,19 @@
     author  = {camunda Services GmbH},
     url     = {https://docs.camunda.org/manual/7.6/reference/bpmn20/tasks/task-markers/#multiple-instance}
 }
+
+@misc{dirk,
+    title           = {Evaluation from a software architectural point of view},
+    author          = {Dr. Dirk Nitsche},
+    howpublished    = {personal communication},
+    year            = {2020}, 
+    month           = {7}
+}
+
+@misc{hanno,
+    title           = {Evaluation from a systems architectural point of view},
+    author          = {Dr. Hanno Walischewski},
+    howpublished    = {personal communication},
+    year            = {2020}, 
+    month           = {7}
+}
