--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -19,6 +19,23 @@ In the cluster for analytical services there are multiple instances which are us
 In conclusion the key features are contained within die SCS approach to DWS, the process driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principle the overall systems gets more adaptive in terms of customer needs. The overall development and dependency management gets easier as well as faster. 
 
 \subsection{Evaluation of this Architecture from an industrial Point of View}
+To verify feasibility, purpose and improvements of this approach to Data Warehouse Systems an interview is conducted. Before introducing the outcome guidelines and candidates need to be defined and chosen.
+
 \subsubsection{Design of Guidelines for Interview}
+These guidelines aim to define questions which should be answered by consulted experts. The overall aim is to ensure the benefits of this approach as well as en-lighting some weaknesses. 
+\begin{itemize}
+    \item Can a benefit be seen within the adaptive orchestration of microservices by applying BPM?
+    \item Does the use of self contained systems make sense in this field of application?
+    \item Is this approach overall more beneficial than the introduced ones by Kimball and Inmon?
+    \item What are possible weaknesses or bottlenecks within the introduced architecture?
+\end{itemize}
+
 \subsubsection{Selection of proper Candidates}
+In order to have a meaningful feedback, two candidates will be chosen. Due to the area of research it is obvious to select two software / system architects with good experience.\newline
+\\
+In terms of software architecture Dr. Dirk Nitsche is going to evaluate the resulting systems and the underlying architectural paradigms. He did his PhD in the area of database and knowledge systems at the technical university of Munich and is currently employed as a software architect at Siemens Mobility. Due to his knowledge in data driven applications and expertise in this area he was selected for this evaluation.\newline
+Dr. Hanno Walischewski is taking over from the systems point of view. He achieved his PhD in 1999 at the university of Freiburg concerning the learning and understanding structured documents. Afterwards he made his way into systems architecture and is currently Chief Architect for Intelligent Traffic Systems at Siemens Mobility. He has some great know-how in terms of microservices and their collaboration. Due to this he will analyse the orchestration of those services and their weaknesses.  
+
 \subsubsection{Resulting Feedback}
+\cite{dirk}
+\cite{hanno}
