Added list of acronyms

--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -7,10 +7,10 @@ After pointing out the intend, why those systems are needed and introducing the 
 In this paper the focus is set on architectural fundamentals which can be used for such systems. Therefore the reference architecture of Data Warehouse Systems is introduced first of all. Afterwards we will look upon some other commonly used architectures which use some newer ideas.
 The main objective during this research is to identify, if commonly used legacy architectures can be replaced by newer technology with will lead to some advantages.
 \newline
-Therefore micro-services and some techniques e.g. self-contained-systems are introduced. Later on the idea of event streams in system landscapes is explained.\newline
+Therefore microservices and some techniques e.g. self-contained-systems are introduced. Later on the idea of event streams in system landscapes is explained.\newline
 Having elaborated those ideas, they will be adapted and combined into possible architectures. In this section there will be an in-depth discussion about the advantages and disadvantages of each technology.\newline
 Afterwards there will be a lookout upon the idea of Business Process Management. The underlying process-driven-architecture enables us to erase some of those previously shown disadvantages.\newline
 \\
-Thus will then result into the hypothesis of this paper. Throughout the adaption of process-driven micro-service principles in the area of Data-Warehouse-Architectures, a huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.\newline 
-In the end the resulting architecture will be, as described in the title, a process-driven semi-event-based micro-service system, enabling us to run data intensive applications. \newline
+Thus will then result into the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data-Warehouse-Architectures, a huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.\newline 
+In the end the resulting architecture will be, as described in the title, a process-driven semi-event-based microservice system, enabling us to run data intensive applications. \newline
 As we make progress in this field of research, we will make use of several other publications and use expert interviews as well to underpin this paper. 
