--- a/005Microservices.tex
+++ b/005Microservices.tex
@@ -1,13 +1,13 @@
-\section{Introduction to Micro-service Architectures}
+\section{Introduction to Microservice  Architectures}
 \label{sec:techKnowHow}
-This section aims to elaborate the nature of microservices in a quite general matter. Therefore the term will be defined and distinguished between service-oriented-architectures (SOA) first of all. After having understood that crucial part the theory and benefits of self-contained-systems are introduced. This chapter will be finished by having a look upon event-based micro-service collaboration. Their advantages as well as disadvantages will be shown within that section. 
+This section aims to elaborate the nature of microservices in a quite general matter. Therefore the term will be defined and distinguished between \acrfull{soa} first of all. After having understood that crucial part the theory and benefits of self-contained-systems are introduced. This chapter will be finished by having a look upon event-based microservice  collaboration. Their advantages as well as disadvantages will be shown within that section. 
 
 \subsection{Distinction between SOA and Microservice-Architectures}
 Microservice Architecture is a quite commonly used buzz-word for a state of the art way of how to implement software. Having a look into the data of Google Trends it is possible to see that the popularity of this approach increases dramatically since 2014. \cite{microservices}\newline
 \\
 Having a monolithic application which grew over time often lead into high maintainability and complexity. To avoid this the architecture needs to be de-serialised into multiple services, which results into a Service-Oriented Architecture (SOA). But due to current development it seems that SOA will be replaced by microservice architectures more and more.\cite{mircorVSsoa}\newline
 Both of those methodologies suggest the decomposition of software. Therefore SOA focuses upon integrating those services for the entire company within a centralised management and governance. Instead, microservices focus on decomposing services without such global governance. This results into higher autonomy and decoupling.\cite{mircorVSsoa} Therefore a communication over HTTP REST is chosen quite often.\newline
-Furthermore the coupling between the different services is concerned to be low. This allows multiple development teams to work on distinct components without affecting each other. Overall it is possible to see that those teams are enabled to build and adapt components faster than in monolithic solutions. Additionally  modern IT environments often include DevOps which can embrace their full potential of constant iteration and delivery (CI/CD) within a micro-service world. \cite{redHatMicroservices}\newline
+Furthermore the coupling between the different services is concerned to be low. This allows multiple development teams to work on distinct components without affecting each other. Overall it is possible to see that those teams are enabled to build and adapt components faster than in monolithic solutions. Additionally  modern IT environments often include DevOps which can embrace their full potential of constant iteration and delivery (\acrshort{ci/cd}) within a microservice  world. \cite{redHatMicroservices}\newline
 \\
 Next to the benefits there are also some challenges to face while moving to such a decomposed architecture. Brian Atkisson who is a Senior Principal Systems Engineer at Red Hat introduces eight of those. 
 \begin{itemize}
@@ -17,14 +17,14 @@ Next to the benefits there are also some challenges to face while moving to such
     \item Deploying - A strong automation is often necessary in order to be able to full-fill CI/CD requirements.
     \item Logging - Without a centralised logging it extremely hard to figure out what is going on.
     \item Monitoring - Handling of service data and distributed request tracing within a centralised dashboard.
-    \item Debugging - It is hard to determine within which micro-service a problem is located without proper monitoring. Even good monitoring and logging is more often used than debugging.
+    \item Debugging - It is hard to determine within which microservice  a problem is located without proper monitoring. Even good monitoring and logging is more often used than debugging.
     \item Connectivity - Somehow the services need to be connected to each other without any hard coded information. This topic will be discussed while having a look upon the event-based and process-driven approach. 
 \end{itemize}
 \cite{ChallengesMicroservices}
 
 \subsection{The Sense behind Self-Contained-Systems}
-Talking about self-contained-systems (SCS) is always about the question of how to structure and slice the micro-services mentioned above.\newline
-The most important characteristics are contained within a creative commons license from the company innoQ. In total there are eight characteristics which need to be full-filled by such an application. First of all, the SCS need to be autonomous. Due to this all data, business logic and UI need to be contained within the application. Furthermore the communication between multiple systems should be asynchronous and the shared infrastructure needs to be minimised. \cite{scs}\newline
+Talking about \acrfull{scs} is always about the question of how to structure and slice the microservice s mentioned above.\newline
+The most important characteristics are contained within a creative commons license from the company innoQ. In total there are eight characteristics which need to be full-filled by such an application. First of all, the SCS need to be autonomous. Due to this all data, business logic and \acrshort{ui} need to be contained within the application. Furthermore the communication between multiple systems should be asynchronous and the shared infrastructure needs to be minimised. \cite{scs}\newline
 \\
 Eberhard Wolff gives a quite good outlook about the adoption of this fundamental idea to a real system. Therefore he elaborates upon how to integrate multiple SCS, targets the topic of data replication and heads forward to a possible partitioning of a costumer journey into various SCS. This will be discussed below:\newline
 \begin{itemize}
@@ -42,7 +42,7 @@ Eberhard Wolff gives a quite good outlook about the adoption of this fundamental
 
 These fundamentals about micro services and self contained systems are quite important and will be mapped upon data warehouse architectures later on in chapter \ref{sec:finalArchitecture}.
 
-\subsection{Integrating an Event-Based Bus into the Micro-Service Landscape}
+\subsection{Integrating an Event-Based Bus into the Microservice  Landscape}
 \label{sec:eventBasedArchitecture}
 Making use of an event-driven choreographed architecture is the opposite of using a centralised orechestrator and therefore provides a loose coupling. The ''EventBus allows publish-subscribe-style communication between components without requiring the components to explicitly register with one another (and thus be aware of each other).'' \cite{EventBusExplained} \newline
 Another well known product which is often used in this context is Apache Kafka. It calls itself as ''distributed streaming platform'' having three key capabilities. First of all publishing and subscribing to streams, store streams as well as process streams.\cite{kafka}
@@ -52,7 +52,7 @@ Bernd Rücker, who is Chief Technologist of Camunda, points those out quite well
 \begin{itemize}
     \item How to change the flow of events?
     \item How to avoid losing sight of the flow?
-    \item How to manage SLAs and resilience of the overall flow?
+    \item How to manage \acrshort{sla}s and resilience of the overall flow?
     \item How to avoid wired coupling?
 \end{itemize}
 \cite{eventDrivenMicroservices}\newline
