--- a/004StateOfTheArtDWS.tex
+++ b/004StateOfTheArtDWS.tex
@@ -2,7 +2,7 @@
 \label{sec:otherArchitectures}
 After having introduced the reference architecture this chapter aims to show other approaches for building Data-Warehouse-Systems. Main object of consideration is the distributed DWS architecture. This one was invented by Ralph Kimball and can be seen as counterpart to Inmons hub and spoke architecture.\newline
 Afterwards the characteristics of different data mart arrangements will be handled. This information will be used later on especially to deal with a flexible data provision.\newline
-In the end an outlook upon different options regarding the data persistence in the different layers will be given. This topic will get relevant while talking about the deployment of Data-Warehouse-Systems as collection of micro-services by using the self-contained systems approach.
+In the end an outlook upon different options regarding the data persistence in the different layers will be given. This topic will get relevant while talking about the deployment of Data-Warehouse-Systems as collection of microservices by using the self-contained systems approach.
 
 \subsection{Distributed Data Warehousing Architecture}
 After having explained the reference architecture from A. Bauer which implements the hub and spoke idea from Inmon one very common alternative is presented. Ralph Kimball is another pioneer in this area who came up with a distributed data warehousing architecture based upon data marts connected to a bus system. \cite{surveyDWSArchs} Figure \ref{fig:distributedWarehouseArchitecture} visualises this in more detail.
@@ -22,7 +22,7 @@ A central Data Warehouse consists of a single central instance with only one dat
 Instead the use of a distributed Data Warehouse consists of multiple data marts which are department specific. Each of this additional data storage has a separate schema. Due to this the creation of a new one results in more work. Problematic is the company-wide perspective, which will get lost. \newline
 A possible combination of the advantages from the two architectures above can be found in a central Data Warehouse with multiple distributed data marts. By applying this concept it is possible to run company-wide analysis upon the central Data Warehouse and using data marts for the individual needs coming from various departments.
 \newline
-One last aspect which needs to get pointed out is the design aspects of dependent and independent data marts. Therefor lets have a look at dependent ones first. Those are build upon the core data warehouse and might contain additional or aggregated information. Nevertheless the underlying CDW ensures a consistency of the information distributed to the data marts. An independent data mart won't consist of such layer beneath. Due to that the information inside might be duplicated and distinct. An advantage of using an independent architecture is the simplicity of creating those. \cite{scriptRasch} \newline
+One last aspect which needs to get pointed out is the design aspects of dependent and independent data marts. Therefor lets have a look at dependent ones first. Those are build upon the core data warehouse and might contain additional or aggregated information. Nevertheless the underlying \acrshort{cdw} ensures a consistency of the information distributed to the data marts. An independent data mart won't consist of such layer beneath. Due to that the information inside might be duplicated and distinct. An advantage of using an independent architecture is the simplicity of creating those. \cite{scriptRasch} \newline
 \\
 This section should have shown the various design possibilities of data marts inside a corporate Data Warehouse System. By thinking about a modern adaption of DWS architectures, it is necessary to construct new data marts easily without losing the company-wide point of view and still enable departments to come up with their own requirements for analysis. 
 
@@ -30,14 +30,14 @@ This section should have shown the various design possibilities of data marts in
 After having introduced various structural options above let us face the topic of data persistence in current Data Warehouse Systems.
 All layers inside the DWS can be created with virtual data or with its own data persistence. For instance it is possible to have a complete virtual DWS.\cite{sinz}\newline
 \\
-For now let us start off with the ETL-Layer. It is quite common to have a persistence inside the staging area which is often used as temporal data storage. Especially during the data transformation this can be quite beneficial. Besides of that it is possible to use an Operational-Data-Store (ODS) which was introduce by Inmon as ''An operational data store is a subject-oriented, integrated, volatile, current-valued, detailed-only collection of data in support of an organisations need for up-to-the-second, operational, integrated, collective information''\cite{buildingTheDWS} This storage uses the result of the data transformation and integration to publish it in such an ODS to have just in Real-Time-Data available in the DWS.\newline
-In concern of data historicization the persistence can be contained in the supply area (e.g. Data Marts) or the CDW which can be seen as component for historising the data. Depending on the technologies which are used (e.g. OLAP, ROLAP) there are multiple recommendations which get elaborated in Sinz's article upon the architecture for Data Warehouse Systems.
+For now let us start off with the ETL-Layer. It is quite common to have a persistence inside the staging area which is often used as temporal data storage. Especially during the data transformation this can be quite beneficial. Besides of that it is possible to use an \acrfull{ods} which was introduce by Inmon as ''An operational data store is a subject-oriented, integrated, volatile, current-valued, detailed-only collection of data in support of an organisations need for up-to-the-second, operational, integrated, collective information''\cite{buildingTheDWS} This storage uses the result of the data transformation and integration to publish it in such an ODS to have just in Real-Time-Data available in the DWS.\newline
+In concern of data historicization the persistence can be contained in the supply area (e.g. Data Marts) or the CDW which can be seen as component for historising the data. Depending on the technologies which are used (e.g. \acrshort{olap}, \acrshort{rolap}) there are multiple recommendations which get elaborated in Sinz's article upon the architecture for Data Warehouse Systems.
 \begin{itemize}
-    \item If a relational (SQL) interface is used it is sufficient to persist the data in the Core Data Warehouse.
+    \item If a relational (\acrshort{sql}) interface is used it is sufficient to persist the data in the Core Data Warehouse.
     \item While using multidimensional OLAP-tools it is common to store the information inside the supply area of the DWS.
     \item In case of using relational OLAP it is common to have a relational persistence inside the data marts. It is not necessary to use a redundant data storage on the beneath but recommended due to a decoupling of the loading process. 
 \end{itemize}
 \cite{sinz}
 \\
 \\
-After the most commonly used architectures for Data Warehouse Systems have been outlined and the requirements regarding a DWS are pointed out, some newer technologies are introduced. In detail the fundamental ideas of micro-service and event-based architectures as well as Business Process Management will be elaborated. Further on these technologies will align in order to result into the final draft of the presented architecture.
+After the most commonly used architectures for Data Warehouse Systems have been outlined and the requirements regarding a DWS are pointed out, some newer technologies are introduced. In detail the fundamental ideas of microservice and event-based architectures as well as Business Process Management will be elaborated. Further on these technologies will align in order to result into the final draft of the presented architecture.
