--- a/006ProcessDivenArchitectures.tex
+++ b/006ProcessDivenArchitectures.tex
@@ -1,12 +1,12 @@
 \section{Adaption of Business Process Management}
 \label{sec:bpm}
-After having introduced microservices and their event-based choreography we now take business process management (BPM) into account. This technique gains relevance while trying to set up the data warehousing process as adaptive as possible. Furthermore should enable us to overcome the challenges pointed out while talking about the event-based microservice architecture.\newline
+After having introduced microservices and their event-based choreography we now take \acrfull{bpm} into account. This technique gains relevance while trying to set up the data warehousing process as adaptive as possible. Furthermore should enable us to overcome the challenges pointed out while talking about the event-based microservice architecture.\newline
 First of all the term BPM will be defined and mapped upon the area of Data Warehouse Systems. Based upon this foundation the process-driven approach can be introduced. 
 
 \subsection{Defining Business Process Management}
-''Business Process Management (BPM) is a systemic approach geared to capture, design, execute, document, measure, monitor and control automated as well as non-automated processes in order to meet the objectives that are aligned with the business strategy of a company.'' \cite{bpmDef} Another important aspect is that BPM tries to focus upon end to end processes. By this is meant that processes are considered as whole without any separation into fragments.\cite{praxisBPM}\newline
+''\acrfull{bpm} is a systemic approach geared to capture, design, execute, document, measure, monitor and control automated as well as non-automated processes in order to meet the objectives that are aligned with the business strategy of a company.'' \cite{bpmDef} Another important aspect is that BPM tries to focus upon end to end processes. By this is meant that processes are considered as whole without any separation into fragments.\cite{praxisBPM}\newline
 \\
-In order to provide uniform processes and make them generally interpretative the Object Management Group (OMG) defined the standard called Business Process Management Notation (BPMN) which is currently in its second version. A very positive aspect of this is, that the standard isn't owned or controlled by another company and can be used for free in various tools. In contrast to workflow tools there won't be any problem by switching the BPM tool due to this standardisation. \cite{bpmMethodStyle}
+In order to provide uniform processes and make them generally interpretative the \acrfull{omg} defined the standard called \acrfull{bpmn} which is currently in its second version. A very positive aspect of this is, that the standard isn't owned or controlled by another company and can be used for free in various tools. In contrast to workflow tools there won't be any problem by switching the BPM tool due to this standardisation. \cite{bpmMethodStyle}
 
 \subsection{Applying BPM to the Data Warehousing Process}
 In this section we consider the data warehousing process which was introduced in chapter \ref{sec:referenceArchitecture} as an end-to-end process. The corresponding BPMN model can be found in figure \ref{fig:BPMNdatawarehousing}.\newline
@@ -49,6 +49,6 @@ By having a look back upon the challenges taken away from the event-based bus ar
     \item ''Flow of events'': By having an orchestrated approach it is always defined how the events / tokens flow through the system. Additionally most of the engines provide historic information about all tokens which have flown through the process. Due to this the behaviour is always reproducible and compliant. 
     \item ''Losing sight of flow'': Since the BPMN model guides through the flow and is well defined this issue won't occur within this approach.
     \item ''SLAs and resilience'': Since the engines purpose is to act within a stateful resilience pattern this challenge should have been solved as well. Nevertheless having the overall process contained in one service means, that a single point of failure can exist. 
-    \item ''Wired coupling'': If a new service will be added within the process it will only affect it's parent. By adding an ''Age Check'' to our order process the only adaption would be contained within the process definition in the ''Order'' parent service. No other services will be affected. Due to this wired coupling can be less than within event-based systems. Slightly negative is that a stateful REST connection is chosen instead of some asynchronous possibility which is empathised by the SCS architectural approach. 
+    \item ''Wired coupling'': If a new service will be added within the process it will only affect it's parent. By adding an ''Age Check'' to our order process the only adaption would be contained within the process definition in the ''Order'' parent service. No other services will be affected. Due to this wired coupling can be less than within event-based systems. Slightly negative is that a stateful \acrshort{rest} connection is chosen instead of some asynchronous possibility which is empathised by the SCS architectural approach. 
 \end{itemize}
 Overall it can be seen that the usage of a process driven architecture in order to orchestrate microservices can be beneficial. This technique will further be mapped upon a concrete data warehouse architecture which will be introduced in the next chapter. 
