Conclusion and outlook (draft)

--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -1,4 +1,5 @@
 \section{Introduction}
+\label{sec:intro}
 ''The world’s most valuable resource is no longer oil, but data'' \cite{dataIsOil}\newline
 This was stated in an article published by 'The Economist' in 2017 and expresses quite well how important and valuable data currently is. In the last past three years this can definitively be validated. This can lead to negative incidents as seen 2016 during the Brexit referendum or regarding the Cambridge Analytica scandal. But next to that a lot of companies try to generate customer benefits using historicised data.\newline
 To achieve this, there is a need for special systems handling such an intensive amount of data. Basic requirements are gathering of data from heterogeneous sources, transformation and enrichment as well as the deployment for analytical applications. Of course are non-functional requirements as performance or real-time actuation also necessary while talking about specifications.\newline
