--- a/008Conclusion.tex
+++ b/008Conclusion.tex
@@ -1,2 +1,9 @@
 \section{Conclusion and Outlook}
 \label{sec:conclusion}
+In the end of this paper the ''Process-Driven Semi-Event-Based Microservice approach to Data Warehouse Systems'' has been derived and introduced. During the deduction several concepts e.g. self contained systems or business process management have been explained as well. \newline
+\\
+In order to conclude the output of this paper lets head back to the hypothesis of this paper: ''hroughout the adaption of process-driven  microservice  principles  in  the  area  of  Data-Warehouse-Architectures,  a  huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.''(chapter \ref{sec:intro})
+As shown in the derivation as well as the expert interview it can be stated that this approach to DWS delivers improvements regarding individual enhancements. Due to the process driven approach a transparent flow which is easily adaptable. Making use of SCS it is possible to have multiple teams focusing upon specific components which will enable them to deliver faster. By having clusters of microservices along the data warehousing process the components from Inmon's hub and spoke architecture can be mapped. Nevertheless departments have the freedom of retrieving information on their need by having those delivered via a bus system as stated in Kimball's approach.\newline
+Due to this the advantages of both approaches are combined within a state of the art architecture. \newline
+\\
+Since this papers outcome is only theoretical and not underlined with a proof of concept it would be interesting to see some prototype in the future. While doing so the approach can be refined in further detail. Especially since no suggestions regarding the characteristics of the data storage have been made. In this area it would be interesting to see if noSQL databases can replace the typical relational ones. As it can be seen, there is still a lot of refinement which needs to go along with a prototype development. Nevertheless this papers scope is the introduction of this new approach and to enable interested readers to make use of it. 
